Further App Development Tests

--- a/BlueTeamApp/BlueTeamApp/BlueTeamApp.Tests/BlueTeamApp.Tests.csproj
+++ b/BlueTeamApp/BlueTeamApp/BlueTeamApp.Tests/BlueTeamApp.Tests.csproj
@@ -53,7 +53,9 @@
     <Compile Include="Controllers\HomeControllerTest.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="App.config" />
+    <Content Include="App.config">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BlueTeamApp\BlueTeamApp.csproj">
