First Blue Code attempt

--- a/BlueTeamApp/BlueTeamApp/BlueTeamApp/Web.config
+++ b/BlueTeamApp/BlueTeamApp/BlueTeamApp/Web.config
@@ -5,8 +5,9 @@
   -->
 <configuration>
   <connectionStrings>
-    
-    
+    <add name="PermissionDBContext"
+        connectionString="Data Source= DH-WORK\SQLEXPRESS.DHPermissions.dbo"
+        providerName="System.Data.SqlServer"/>  
     <add name="DefaultConnection" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=aspnet-BlueTeamApp-2012612152612;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
